Mobile still broken in news section - fixed in roster/gear

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -429,19 +429,30 @@ footer > div {
 ====================== */
 .roster_gear {
   display: grid;
-  padding: 16px;
-  grid-template-columns: 50% 50%;
-  gap: 16px;
+  grid-template-columns: 16px auto 16px;
+  grid-template-areas: ". rostergear .";
+}
+.roster_gear > div {
+  grid-area: rostergear;
+}
+.roster_gear > div ul {
+  margin: 0;
+  padding: 0;
+  display: grid;
+  gap: 24px;
 }
 @media (min-width: 768px) {
-  .roster_gear {
+  .roster_gear > div ul {
     padding: 24px;
     text-align: center;
     grid-template-columns: 50% 50%;
   }
 }
-.roster_gear > div {
-  grid-area: rostergear;
+.roster_gear > div ul li {
+  list-style: none;
+  background-color: #00ffff;
+  padding-bottom: 24px;
+  text-align: left;
 }
 
 /* =============
@@ -460,31 +471,39 @@ footer > div {
   padding: 0;
   display: grid;
   gap: 24px;
-}
-@media (min-width: 768px) {
-  .whats_new > div ul {
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-areas: "n1 n1 n2 n2" "n3 n3 n4 n4" ". n5 n5 .";
-  }
+  /* @include md{
+   grid-template-columns: repeat(4, 1fr);
+   grid-template-areas: 
+   "n1 n1 n2 n2"
+   "n3 n3 n4 n4"
+   ". n5 n5 ."
+   } 
+
+  /* @include xl{
+   grid-template-columns: repeat(6, 1fr);
+   grid-template-areas:
+   "n1 n1 n2 n2 n3 n3"
+   ". n4 n4 n5 n5 .";
+   } */
+  /* #n1{
+       grid-area: n1;
+   }
+   #n2{
+       grid-area: n2;
+   }
+   #n3{
+       grid-area: n3;
+   }
+   #n4{
+       grid-area: n4;
+   }
+   #n5{
+       grid-area: n5;
+   } */
 }
 .whats_new > div ul li {
   list-style: none;
   background-color: #00ffff;
   padding-bottom: 24px;
   text-align: left;
-}
-.whats_new > div ul #n1 {
-  grid-area: n1;
-}
-.whats_new > div ul #n2 {
-  grid-area: n2;
-}
-.whats_new > div ul #n3 {
-  grid-area: n3;
-}
-.whats_new > div ul #n4 {
-  grid-area: n4;
-}
-.whats_new > div ul #n5 {
-  grid-area: n5;
 }
