--- a/dev/scss/sections/_whats_new.scss
+++ b/dev/scss/sections/_whats_new.scss
@@ -16,13 +16,20 @@
         display: grid;
         gap: 24px;
 
-        @include md{
+        /* @include md{
         grid-template-columns: repeat(4, 1fr);
         grid-template-areas: 
         "n1 n1 n2 n2"
         "n3 n3 n4 n4"
         ". n5 n5 ."
-        }
+        } 
+
+       /* @include xl{
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-areas:
+        "n1 n1 n2 n2 n3 n3"
+        ". n4 n4 n5 n5 .";
+        } */
 
         li{
             list-style: none;
@@ -31,7 +38,7 @@
             text-align: left;
         }
 
-        #n1{
+       /* #n1{
             grid-area: n1;
         }
         #n2{
@@ -45,7 +52,7 @@
         }
         #n5{
             grid-area: n5;
-        }
+        } */
        
         } 
     }
